
*alpha-16
-(Fixed) UI 수정 (1)
-(Fixed) Library 백업에서 아무 것도 백업을 안할 때 백업 저장이 안 되는 버그 수정.

*alpha-17
-(Fixed) UI 수정 (2)

*alpha-18
-(Fixed) UI 수정 (3)

*alpha-19
-(Fixed) UI 수정 (4)

*alpha-20
-(Added) DevSettings에 업데이트 확인하는 기능 추가.

*alpha-21
-(Fixed) 불필요 코드 제거.
-(Fixed) locale 수정.

*alpha-22
-(Added) update-script 추가.

*alpha-23
-(Fixed) 백업 이름 지정에서 중복된 백업 이름을 입력했을 때 while loop에 빠지는 버그 수정.

*alpha-24
-(Fixed) ‘백업된 파일 보기’에서 ShowLog를 활성화시키지 않았을 경우 간략하게 출력하도록 변경.

*alpha-25
-(Added) Library 백업에서 모두 백업할 때 “백업 중...” 문구가 출력되도록 추가.
-(Fixed) /tmp/BackOn 폴더 생성 타이밍 변경.

*alpha-26
-(Added) runUpdateODS 추가.

*alpha-27
-(Fixed) BackOn 업데이트 설치 방식 변경.
-(Fixed) DevSettings 버그 수정.

*alpha-28
-(Added) 복원 일부 기능 추가 (미완성) (1)

*alpha-28
-(Added) 복원 일부 기능 추가 (미완성) (2)
-(Fixed) 백업 메뉴에서 "백업을 취소하고 종료”의 명령 키워드를 변경.

*alpha-29
-(Added) 복원 일부 기능 추가 (미완성) (3)

*alpha-30
-(Added) 복원 일부 기능 추가 (미완성) (4)

*alpha-31
-(Added) 복원 기능 구현 완료. (버그 있음.)

*alpha-32
-(Fixed) 복원 기능 버그 수정 (1)

*alpha-32
-(Fixed) 복원 기능 버그 수정 (2)

*alpha-33
-(Fixed) 복원 기능 버그 수정 (3)

*beta-34
- 첫 beta 빌드 릴리즈.

*alpha-35
-(Added) SHOW_GUIDE_3 추가.

*beta-36
- alpha-35와 같음.

*alpha-37
-(Added) Library 복원에서 755 권한 설정 명령 추가.
-(Added) 초기 화면에서 “명령어(1, 2, 3, 4, q)를 입력해 주세요.” 문구 추가.
-(Added) quitTool_NoClear 추가 및 일부 코드에 적용.

*beta-38
- alpha-37이랑 같음.

*beta-39
-(Added) coreutils-bin depends 추가.

*alpha-40
-(Added) Library 백업에서 all을 사용할 때 Filza 백업 제외 처리 추가.

*beta-41
- alpha-40이랑 같음.

*alpha-42
-(Added) 복원 기능에서 백업한 Cydia 패키지 목록을 보는 기능 추가.
-(Fixed) 한국어 문법 수정.
-(Fixed) 버그 수정.

*alpha-43
-(Added) Library 백업에서 백업한 파일/폴더 삭제 기능 추가.
-(Added) 각종 안내 문구 추가.
-(Fixed) UI 수정.

*alpha-44
-(Fixed) Library 백업의 백업한 파일/폴더 삭제 기능에서 삭제가 안 되던 버그 수정.

*alpha-45
-(Fixed) Library 백업의 백업한 파일/폴더 삭제 기능에서 삭제가 안 되던 버그 수정. (2)

*beta-46
- alpha-45와 같음.

*beta-47
- .DS_Store 제거 (다음부턴 이런 일 없도록 하겠습니다;;)

*alpha-48
-(Fixed) Library 백업에서 all로 백업할 때 BackupAZ 백업 오류 수정. (1차 수정)

*alpha-49
-(Fixed) Library 백업에서 all로 백업할 때 BackupAZ 백업 오류 수정. (2차 수정)