@@ -1,8 +1,8 @@
 #!/bin/sh
 ##############################################
-# BackOn alpha-49
+# BackOn alpha-50
 TOOL_BUILD_TYPE=alpha
-TOOL_BUILD_NUM=49
+TOOL_BUILD_NUM=50
 ##############################################
 
 function setEnglish(){
@@ -317,7 +317,7 @@ function openDevSettings(){
 		elif [[ "${ANSWER_D}" == 16 ]]; then
 			saveSettings
 			loadSettings
-			prepareUpdate
+			installUpdate
 		elif [[ "${ANSWER_D}" == l || "${ANSWER_D}" == ls ]]; then
 			ClearKey
 			showLinesA
@@ -1077,7 +1077,7 @@ function rebootDevice(){
 	quitTool
 }
 
-function prepareUpdate(){
+function prepareUpdatemmm(){
 	if [[ -d "/tmp/BackOn/Update" ]]; then
 		rm -rf /tmp/BackOn/Update
 	fi
@@ -1101,7 +1101,7 @@ function prepareUpdate(){
 }
 
 
-function checkUpdate(){
+function checkUpdatemmm(){
 	while(true); do
 		ClearKey
 		showLinesA
@@ -1137,7 +1137,7 @@ function checkUpdate(){
 	done
 }
 
-function installUpdate(){
+function installUpdatemmm(){
 	echo "${DOWNLOADING} (${UpdateBuildType}-$(cat /tmp/BackOn/Update/build))"
 	if [[ "${ShowLog}" == YES ]]; then
 		wget --no-check-certificate --output-document=/tmp/BackOn/Update/backon.sh "${UPDATE_URL}"
@@ -1162,6 +1162,37 @@ function installUpdate(){
 	chmod +x /tmp/BackOn/Update/update-script
 	/tmp/BackOn/Update/update-script
 	quitTool_NoClear
+}
+
+function installUpdate(){
+	echo "${DOWNLOADING}"
+	if [[ -d "/tmp/BackOn/Update" ]]; then
+		rm -rf "/tmp/BackOn/Update"
+	fi
+	mkdir "/tmp/BackOn/Update"
+	cd "/tmp/BackOn/Update"
+	if [[ "${ShowLog}" == YES ]]; then
+		curl -O -L "https://github.com/pookjw/BackOn/archive/master.zip"
+	else
+		curl -O -L "https://github.com/pookjw/BackOn/archive/master.zip" > /dev/null 2>&1
+	fi
+	if [[ -f master.zip ]]; then
+		if [[ "${ShowLog}" == YES ]]; then
+			unzip master.zip -d master
+		else
+			unzip -qq master.zip -d master
+		fi
+		if [[ ! -d master ]]; then
+			echo "ERROR!"
+		else
+			cd master
+			chmod +x "${UpdateBuildType}/update-script"
+			"${UpdateBuildType}/update-script"
+			quitTool_NoClear
+		fi
+	else
+		echo "ERROR!"
+	fi
 }
 
 ##############################################
@@ -1225,7 +1256,7 @@ while(true); do
 	elif [[ "${ANSWER_A}" == 3 ]]; then
 		switchLanguage
 	elif [[ "${ANSWER_A}" == 4 ]]; then
-		prepareUpdate
+		installUpdate
 	elif [[ "${ANSWER_A}" == quit || "${ANSWER_A}" == q ]]; then
 		quitTool
 	elif [[ "${ANSWER_A}" == ods ]]; then
